# transformer_designer

./: ! TO VERIFY Transformer Designer calculations.docx  .gitignore  ANTIGRAVITY_SP_v2.3_NOVA.md  CLAUDE.md  Dropless_trafo.docx  Good Practices for System Prompt Writing.txt  README.md  power_transformer_framework_plan.md  project_memory.txt  project_structure_report.md  user_guide.md
.agent/logs/: dropless_specs.md  phase3_core_selection.md  session_2025-12-06.md  session_2025-12-08.md  session_2025-12-08_analysis.md  steel_core_research.md
.agent/plans/: IMPLEMENTATION_STATUS_REPORT.md  PHASE_A_COMPLETION_SUMMARY.md  comprehensive_implementation_plan_2025-12-07.md  implementation_plan_active.md  (+1 more)
backend/: README.md  main.py  pyproject.toml
backend/calculations/: __init__.py  ap_method.py  cross_validation.py  erickson_method.py  kg_method.py  losses.py  pulse_transformer.py  thermal.py  validation.py  winding.py
backend/data/: cores.json  materials.json  silicon_steel_cores.json
backend/integrations/: __init__.py  mas_exporter.py  openmagnetics.py  silicon_steel.py
backend/models/: __init__.py  inductor.py  pulse_transformer.py  transformer.py
backend/routers/: __init__.py  export.py  inductor.py  openmagnetics.py  pulse_transformer.py  transformer.py
backend/tests/: __init__.py  conftest.py  test_ap_method.py  test_api.py  test_integration.py  test_losses.py  test_phase_a_implementations.py  test_pulse_transformer.py  test_thermal.py  test_winding.py
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json
pdfs/: github_repos.txt
(+24 files in other folders)
